[package]
name = "named-future-proc-macros"
version = "0.1.0-pre.1"
readme = "README.md"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "named_future_proc_macros"
proc_macro = true

[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
